# project-ult-subsystem-announcement

./: AGENTS.md  CLAUDE.md  Makefile  README.md  constraints-resolved.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: PROGRESS.md  TASK_BREAKDOWN.md  subsystem-announcement.project-doc.md
src/subsystem_announcement/: __init__.py  __main__.py  config.py  logging_setup.py  public.py
src/subsystem_announcement/discovery/: __init__.py  cache.py  dedupe.py  document.py  envelope.py  errors.py  fetcher.py
src/subsystem_announcement/extract/: __init__.py  candidates.py  classifier.py  entity_anchor.py  evidence.py  reasoner_bridge.py
src/subsystem_announcement/extract/rules/: __init__.py  earnings.py  equity_pledge.py  fundraising.py  major_contract.py  regulatory.py  shareholder.py  trading.py
src/subsystem_announcement/graph/: __init__.py  candidates.py  deltas.py  guard.py  rules.py
src/subsystem_announcement/index/: __init__.py  __main__.py  chunker.py  retrieval_artifact.py  sample_query.py  vector_store.py
src/subsystem_announcement/parse/: __init__.py  artifact.py  docling_client.py  errors.py  normalize.py
src/subsystem_announcement/runtime/: __init__.py  _sdk_stub.py  ex0.py  heartbeat.py  lifecycle.py  metrics.py  pipeline.py  registration.py  repair.py  replay.py  sdk_adapter.py  submit.py  trace.py
src/subsystem_announcement/signals/: __init__.py  aggregator.py  candidates.py  classifier.py  templates.py
tests/: __init__.py  conftest.py  extract_fixtures.py  test_discovery_cache.py  test_discovery_envelope.py  test_discovery_fetcher.py  test_extract_classifier.py  test_extract_entity_anchor.py  test_extract_evidence.py  test_extract_fact_candidates.py  test_graph_delta_candidates.py  test_graph_delta_guard.py  test_graph_delta_pipeline.py  test_graph_delta_rules.py  test_index_chunker.py  test_index_retrieval_artifact.py  test_index_vector_store.py  test_metrics_regression.py  test_package_layout.py  test_parse_artifact.py  test_parse_docling_client.py  test_parse_normalize.py  test_pipeline_e2e.py  test_replay_repair.py  test_runtime_sdk.py  test_runtime_submit.py  test_runtime_trace.py  test_signals_candidates.py  test_signals_pipeline.py  test_signals_templates.py
tests/boundary/: test_mixed_batch_dependency.py  test_red_lines.py
tests/contract/: test_contracts_alignment.py  test_runtime_contract.py
tests/contracts/: test_ex1_contract.py  test_ex2_contract.py  test_ex3_contract.py
tests/fixtures/: announcement.toml
tests/fixtures/announcements/: ambiguous-relation.html  bse-regulatory-action.html  cninfo-equity-pledge.html  cninfo-trading-resume.html  config.toml  earnings_envelope.json  failed_parse_run.json  manifest.json  neeq-fundraising-change.docx  parsed_stage3_samples.json  sample_parsed.json  sse-cooperation.docx  szse-controller-change.docx
tests/fixtures/announcements/artifacts/documents/: .dedupe_index.json
tests/integration/: test_docling_llamaindex_offline_preflight.py  test_sdk_wire_shape_integration.py
tests/regression/: test_with_shared_fixtures.py
tests/smoke/: test_public_smoke.py
tests/unit/: test_public_entrypoints.py
