[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subsystem-announcement"
version = "0.1.0"
description = "Announcement subsystem scaffold."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "structlog>=24.1",
    "httpx>=0.27",
    "subsystem-sdk==0.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["subsystem_announcement", "subsystem_announcement.*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
